<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="32dp" />

    <TextView
        android:id="@+id/displayText"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:gravity="center_vertical|end"
        android:text="0"
        android:textSize="48dp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toTopOf="@+id/topGuideline" />

    <Button
        android:id="@+id/sevenButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/sevenButton"
        android:text="@string/sevenButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/fourButton"
        app:layout_constraintEnd_toStartOf="@+id/eightButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/displayText" />

    <Button
        android:id="@+id/eightButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/eightButton"
        android:text="@string/eightButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/fiveButton"
        app:layout_constraintEnd_toStartOf="@+id/nineButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sevenButton"
        app:layout_constraintTop_toBottomOf="@+id/displayText" />

    <Button
        android:id="@+id/nineButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/nineButton"
        android:text="@string/nineButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/sixButton"
        app:layout_constraintEnd_toStartOf="@+id/sqrtButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eightButton"
        app:layout_constraintTop_toBottomOf="@+id/displayText" />

    <Button
        android:id="@+id/sqrtButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/sqrtButton"
        android:text="@string/sqrtButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/divButton"
        app:layout_constraintEnd_toStartOf="@+id/clearButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nineButton"
        app:layout_constraintTop_toBottomOf="@+id/displayText" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/clearButton"
        android:text="@string/clearButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/percButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sqrtButton"
        app:layout_constraintTop_toBottomOf="@+id/displayText" />

    <Button
        android:id="@+id/fourButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/fourButton"
        android:text="@string/fourButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/oneButton"
        app:layout_constraintEnd_toStartOf="@+id/fiveButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/sevenButton" />

    <Button
        android:id="@+id/fiveButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/fiveButton"
        android:text="@string/fiveButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/twoButton"
        app:layout_constraintEnd_toStartOf="@+id/sixButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fourButton"
        app:layout_constraintTop_toBottomOf="@+id/eightButton" />

    <Button
        android:id="@+id/sixButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/sixButton"
        android:text="@string/sixButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/threeButton"
        app:layout_constraintEnd_toStartOf="@+id/divButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fiveButton"
        app:layout_constraintTop_toBottomOf="@+id/nineButton" />

    <Button
        android:id="@+id/divButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/divButton"
        android:text="@string/divButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/multButton"
        app:layout_constraintEnd_toStartOf="@+id/percButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sixButton"
        app:layout_constraintTop_toBottomOf="@+id/sqrtButton" />

    <Button
        android:id="@+id/percButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/percButton"
        android:text="@string/percButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/subButton"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/divButton"
        app:layout_constraintTop_toBottomOf="@+id/clearButton" />

    <Button
        android:id="@+id/threeButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/threeButton"
        android:text="@string/threeButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/decButton"
        app:layout_constraintEnd_toStartOf="@+id/multButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/twoButton"
        app:layout_constraintTop_toBottomOf="@+id/sixButton" />

    <Button
        android:id="@+id/oneButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/oneButton"
        android:text="@string/oneButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/sinButton"
        app:layout_constraintEnd_toStartOf="@+id/twoButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/fourButton" />

    <Button
        android:id="@+id/twoButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/twoButton"
        android:text="@string/twoButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/zeroButton"
        app:layout_constraintEnd_toStartOf="@+id/threeButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/oneButton"
        app:layout_constraintTop_toBottomOf="@+id/fiveButton" />

    <Button
        android:id="@+id/subButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/subButton"
        android:text="@string/subButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/eqButton"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/multButton"
        app:layout_constraintTop_toBottomOf="@+id/percButton" />

    <Button
        android:id="@+id/multButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/multiButton"
        android:text="@string/multiButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toStartOf="@+id/subButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/threeButton"
        app:layout_constraintTop_toBottomOf="@+id/divButton" />

    <Button
        android:id="@+id/sinButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/sinButton"
        android:text="@string/sinButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
        app:layout_constraintEnd_toStartOf="@+id/zeroButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/oneButton" />

    <Button
        android:id="@+id/zeroButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/zeroButton"
        android:text="@string/zeroButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
        app:layout_constraintEnd_toStartOf="@+id/decButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sinButton"
        app:layout_constraintTop_toBottomOf="@+id/twoButton" />

    <Button
        android:id="@+id/decButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/decButton"
        android:text="@string/decButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
        app:layout_constraintEnd_toStartOf="@+id/addButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zeroButton"
        app:layout_constraintTop_toBottomOf="@+id/threeButton" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/addButton"
        android:text="@string/addButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
        app:layout_constraintEnd_toStartOf="@+id/eqButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/decButton"
        app:layout_constraintTop_toBottomOf="@+id/multButton" />

    <Button
        android:id="@+id/eqButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:tag="@string/eqButton"
        android:text="@string/eqButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@+id/subButton" />

</androidx.constraintlayout.widget.ConstraintLayout>